# hello-github-actions

./: .gitignore  KARATE-MCP-README.md  MCP-CLIENT-INTEGRATION.md  README.md  Screenshot.py  Test1.yml  examples_programmatic.py  input.xml  karate-mcp-config.json  karate_mcp_server.py  main.yml  quickstart.sh  requirements-karate-mcp.txt  test_karate_mcp.py
POC_mcp_testscript/test_mcp_orchestrator/: .env.example  DEMO_SCRIPTS.md  INSTALL.md  KARATE_ENHANCEMENT_GUIDE.md  README.md  SETUP_INSTALLATION_GUIDE.md  SSL_FIX_GUIDE.md  attempt_ssl_fix.py  code_analysis.py  demo_expected_output.py  demo_mcp_client.py  demo_mcpllm_bridge.py  demo_runner.py  diagnose_ssl.py  enhanced_mcp_client_caller.py  fix_python_ssl.py  mcp_client_caller.py  mcpllm_bridge_client_caller.py  package-lock.json  pyproject.toml  requirements.txt  setup_after_python_fix.ps1  system_check.py  verify_ssl_fix.py
POC_mcp_testscript/test_mcp_orchestrator/client_bridge/: config.py  llm_client.py  mcp_client.py
POC_mcp_testscript/test_mcp_orchestrator/demo_results/api_basic/: demo_results.json
POC_mcp_testscript/test_mcp_orchestrator/demo_results/integration_full/: demo_results.json
POC_mcp_testscript/test_mcp_orchestrator/generated_scripts/: QAAR_6916.spec.ts  README.md  package.json  playwright.config.ts
POC_mcp_testscript/test_mcp_orchestrator/prompts/: README.md  __init__.py  automation_prompts.py  system_prompts.py
POC_mcp_testscript/test_mcp_orchestrator/server/: browser_navigator_server.py  jira_config.py  karate_test_server.py  unified_test_orchestrator.py
karate-tests/: pom.xml
(+8 files in other folders)
